...
                                        <rect key="frame" x="149" y="12" width="100" height="0.0"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <state key="normal" title="PaymentSheet"/>
                                        <connections>
                                            <segue destination="ViG-Ud-ejY" kind="show" id="yyz-vx-Eng"/>
...
                                        <rect key="frame" x="97.5" y="36" width="203" height="0.0"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <state key="normal" title="PaymentSheet.FlowController"/>
                                        <connections>
                                            <segue destination="My4-RU-qnC" kind="show" id="Xdz-OC-9o9"/>
...
                                        <rect key="frame" x="59.5" y="48" width="279" height="0.0"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <state key="normal" title="PaymentSheet.FlowController (Deferred)"/>
                                        <connections>
                                            <segue destination="Gh7-vw-dR9" kind="show" id="bXJ-Wp-AsJ"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="jAV-Cf-o6R" userLabel="PaymentSheet (SwiftUI)">
                                        <rect key="frame" x="117" y="60" width="164" height="0.0"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                        <rect key="frame" x="65" y="72" width="268" height="0.0"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <state key="normal" title="PaymentSheet.FlowController (SwiftUI)"/>
                                        <connections>
                                            <segue destination="AjW-Xm-4P3" kind="show" destinationCreationSelector="showSwiftUICustomExample:" id="dAe-GM-ken"/>
...
                                <rect key="frame" x="20" y="160" width="374" height="545.5"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your cart" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DgE-aS-jOe">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="26.5"/>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="22"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                <state key="normal" title="Buy">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                        <rect key="frame" x="0.0" y="495.5" width="374" height="50"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" text="Payment method" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFi
                                                <rect key="frame" x="0.0" y="0.0" width="123" height="50"/>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
...
                                            <button opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="1000" verticalHuggingPriority="750" verticalCompressionResistancePriority="250" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0ak-EM-HPh">
                                                <rect key="frame" x="303" y="8" width="71" height="34"/>
                                                <accessibility key="accessibilityConfiguration" identifier="SelectPaymentMethodButton" label="Payment method"/>
                                                <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                                <state key="normal" title="Add"/>
...
                                                                <rect key="frame" x="272" y="22" width="94" height="32"/>
                                                                <userDefinedRuntimeAttributes>
                                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="hotdog_stepper"/>
                                                                </userDefinedRuntimeAttributes>
                                                                <connections>
...
                                                                <rect key="frame" x="272" y="22" width="94" height="32"/>
                                                                <userDefinedRuntimeAttributes>
                                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="salad_stepper"/>
                                                                </userDefinedRuntimeAttributes>
                                                                <connections>
...
                                                <rect key="frame" x="317" y="9" width="51" height="31"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="subscribe_switch"/>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
...
